--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 	<h1>Hello</h1>
-	<p>I'm hosted with GitHub Pages.</p>
+	<p>I'm majoring in software.</p>
+	<p>I`m 23 years old. (I eneterd in 2017)</p>
 	</body>
 </html>
