align and modify intrduction

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-	<h1>Hello</h1>
-	<p>I'm majoring in software.</p>
+	<h1 align="center">INTRODUCTION</h1>
+	<p>Hello</p>
+	<p>I'm Kangbaejin. I`m majoring in software.</p>
 	<p>I`m 23 years old. (I eneterd in 2017)</p>
-	</body>
+</body>
 </html>
