--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <body>
-	<h1 align="center">INTRODUCTION</h1>
+	<h1 align="center">SELF INTRODUCTION</h1>
 	<p>Hello</p>
 	<p>I'm Kangbaejin. I`m majoring in software.</p>
 	<p>I`m 23 years old. (I eneterd in 2017)</p>
+	
+	<h1 align="center">OUR TEAM MEMBER</h1>
+	<p>강민석 <a href="www.naver.com">Move to his page</a></p>
+	<p>백지훈 <a href="www.naver.com">Move to his page</a></p>
+	<p>손건호 <a href="www.naver.com">Move to his page</a></p>
+	<p>송현일 <a href="www.naver.com">Move to his page</a></p>
 </body>
 </html>
