--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<p>I`m 23 years old. (I eneterd in 2017)</p>
 	
 	<h1 align="center">OUR TEAM MEMBER</h1>
-	<p>강민석 <a href="www.naver.com">Move to his page</a></p>
-	<p>백지훈 <a href="www.naver.com">Move to his page</a></p>
-	<p>손건호 <a href="www.naver.com">Move to his page</a></p>
-	<p>송현일 <a href="www.naver.com">Move to his page</a></p>
+	<p>강민석 <a href="https://www.naver.com">Move to his page</a></p>
+	<p>백지훈 <a href="https://www.naver.com">Move to his page</a></p>
+	<p>손건호 <a href="https://www.naver.com">Move to his page</a></p>
+	<p>송현일 <a href="https://www.naver.com">Move to his page</a></p>
 </body>
 </html>
